--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,12 @@ img {
     grid-column: 2 / 6; 
     grid-row: 1 / 2; 
     padding-left: 5px;
-   
+}
+
+.menu {
+  color:black; 
+  text-decoration: none;
+  text-align: center;
 }
 
   .storyleft {
@@ -93,7 +98,7 @@ img {
     height: 100vh;
     width: 100%;
     grid-template-rows: 100vh;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   
   .grid-oefening-2 {
@@ -296,4 +301,85 @@ img {
   .grid-oefening-9 .bg-green3 {
     background-color:green;
     grid-column: 4/5;
-    grid-row: 3/5; 
+    grid-row: 3/5 ; 
+  } 
+
+  .grid-oefening-10 {
+    display: grid;
+    height: 100vh;
+    width: 100%;
+    grid-template-rows:auto auto 1fr;
+    grid-template-columns: auto 20vw 20vw 20vw auto ;
+  }
+
+ .pagetitle {
+   grid-row: 1/2; 
+   grid-column: 2/5;
+   text-align: center; 
+ }
+
+ .menuknopjes {
+   grid-row: 2/3 ; 
+   grid-column: 2/5; 
+   display: grid; grid-template-columns: auto auto auto;
+ }
+
+ .webton {
+   color: white; 
+   text-align: center;
+   font-family: 'Roboto', sans-serif;
+ }
+ 
+ .button-webton {
+text-align: center;
+display: flex;
+margin: auto; 
+background-color: orange;
+font-family: 'Roboto', sans-serif;
+color: white;
+padding: 10px;
+margin-top: 10px;
+font-size: 16px;
+ }
+
+.button-codrops {
+  text-align: center;
+  display: flex;
+  margin: auto; 
+  background-color:green;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  padding: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+ 
+   }
+
+   .button-codrops2 {
+    text-align: center;
+    display: flex;
+    margin: auto; 
+    background-color: blue;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+     }
+p {
+  text-align: center;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  width: auto;
+  margin: 10px;
+}
+
+
+
+    
+     
+
+
+
+
+
